--- a/index.html
+++ b/index.html
@@ -1,119 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>모임 안내</title>
-
 <style>
 body {
-  font-family: sans-serif;
-  max-width: 600px;
-  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  background: #f5f5f5;
   padding: 20px;
-  line-height: 1.6;
 }
-section {
-  margin-bottom: 30px;
-}
-h2 {
-  border-bottom: 2px solid #ddd;
-  padding-bottom: 5px;
-}
-.card {
-  background: #f9f9f9;
-  padding: 12px;
-  margin-top: 10px;
-  border-radius: 8px;
-}
-</style>
-</head>
-
-<body>
-
-<h1 id="title"></h1>
-
-<section>
-  <h2>📍 모임위치</h2>
-  <div id="location"></div>
-</section>
-
-<section>
-  <h2>🚪 입장방법</h2>
-  <div id="entry"></div>
-</section>
-
-<section>
-  <h2>🚗 주차안내</h2>
-  <div id="parking"></div>
-</section>
-
-<section>
-  <h2>⚠️ 주의사항</h2>
-  <div id="notice"></div>
-</section>
-
-<section>
-  <h2>📅 모임일정</h2>
-  <div id="events"></div>
-</section>
-
-<script>
-async function loadData() {
-  try {
-    const configRes = await fetch("./data/siteConfig.json");
-    const config = await configRes.json();
-
-    const eventsRes = await fetch("./data/events.json");
-    const events = await eventsRes.json();
-
-    document.getElementById("title").innerText = config.title;
-
-    document.getElementById("location").innerHTML = `
-      <div class="card">
-        <strong>${config.locationName}</strong><br/>
-        ${config.address}
-      </div>
-    `;
-
-    document.getElementById("entry").innerHTML = `
-      <div class="card">
-        ${config.entryGuide}
-      </div>
-    `;
-
-    document.getElementById("parking").innerHTML = `
-      <div class="card">
-        ${config.parkingInfo}
-      </div>
-    `;
-
-    document.getElementById("notice").innerHTML = `
-      <div class="card">
-        ${config.commonNotes}
-      </div>
-    `;
-
-    let eventsHtml = "";
-    events.forEach(e => {
-      eventsHtml += `
-        <div class="card">
-          ${e.date} <br/>
-          ${e.startTime} ~ ${e.endTime} <br/>
-          ${e.memo}
-        </div>
-      `;
-    });
-
-    document.getElementById("events").innerHTML = eventsHtml;
-
-  } catch (err) {
-    document.body.innerHTML = "데이터를 불러오지 못했습니다. data 폴더/파일 경로를 확인해주세요.";
-  }
-}
-
-loadData();
-</script>
-
-</body>
-</html>
+.section {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  margin-bottom:
